Add filesystem tools and enable exFAT in kernel
- dosfstools 4.2: FAT filesystem utilities (mkfs.fat, fsck.fat)
- exfatprogs 1.3.1: exFAT filesystem utilities
- zip 3.0: Info-ZIP compression utility (needs patches for modern gcc)
- Enable CONFIG_EXFAT_FS in kernel config for USB/SD card support

--- a/packages/d.toml
+++ b/packages/d.toml
@@ -1,3 +1,13 @@
+[packages.dosfstools]
+version = "4.2"
+version_check = "github:dosfstools/dosfstools"
+description = "FAT filesystem utilities (mkfs.fat, fsck.fat)"
+url = "https://github.com/dosfstools/dosfstools/releases/download/v${version}/dosfstools-${version}.tar.gz"
+stage = 3
+build_system = "autotools"
+configure_flags = "--enable-compat-symlinks"
+provides = ["/usr/sbin/mkfs.fat", "/usr/sbin/mkfs.vfat"]
+
 [packages.desktop-file-utils]
 version = "0.28"
 version_check = "freedesktop:xdg/desktop-file-utils"
