--- a/packages/e.toml
+++ b/packages/e.toml
@@ -1,3 +1,12 @@
+[packages.exfatprogs]
+version = "1.3.1"
+version_check = "github:exfatprogs/exfatprogs"
+description = "exFAT filesystem utilities"
+url = "https://github.com/exfatprogs/exfatprogs/releases/download/${version}/exfatprogs-${version}.tar.gz"
+stage = 3
+build_system = "autotools"
+provides = ["/usr/sbin/mkfs.exfat"]
+
 [packages.enchant]
 version = "2.8.14"
 version_check = "github:AbiWord/enchant"
